2021-07-28 Shahzad Muzaffar  <@smuzaffar>
	V06-03-01 Fix proect rename/move issue
2021-07-18 Shahzad Muzaffar  <@smuzaffar>
	V06-03-00 Remove Perl dependency use python3 as default
2021-07-17 Shahzad Muzaffar  <@smuzaffar>
	V06-02-23 Use PY3_DXR
2021-07-09 Shahzad Muzaffar  <@smuzaffar>
	V06-02-22 set SCRAM_TEST_NAME, SCRAM_TEST_PATH, SCRAM_TEST_PACKAGE and
	SCRAM_TEST_PRE_TEST env for each unit test.
	Cleanup explicit python3 class to edm tools. tools has been fixed in
	cmssw
2021-07-07 Shahzad Muzaffar  <@smuzaffar>
	V06-02-21 edm class transient checks to use python3
	V06-02-20 edmWriteConfig is binary
	V06-02-19 Use python3 for edm tools
2021-07-06 Shahzad Muzaffar  <@smuzaffar>
	V06-02-18 Update coral to set python3 paths
2021-07-04 Shahzad Muzaffar  <@smuzaffar>
	V06-02-17 Use python3 for boost serialization
2021-06-26 Shahzad Muzaffar  <@smuzaffar>
	V06-02-16 Added detect_odr_violation=0 to ASAN_OPTIONS
2021-06-22 Shahzad Muzaffar  <@smuzaffar>
	V06-02-15 Bug fix: properly handle EDM_PLUGIN=0 flags
2021-06-20 Shahzad Muzaffar  <@smuzaffar>
	V06-02-14 Add unit test time in the log
2021-06-16 Shahzad Muzaffar  <@smuzaffar>
	V06-02-13 Use shutil.move which works for cross-device
2021-06-11 Shahzad Muzaffar  <@smuzaffar>
	V06-02-12 Use python3 for scripts
2021-06-10 Shahzad Muzaffar  <@smuzaffar>
	V06-02-11 Do not persist SCRAM_NOEDM_CHECKS
2021-06-08 Shahzad Muzaffar  <@smuzaffar>
	V06-02-10 Do not run too many python threads for processing DXR files.
2021-06-04 Shahzad Muzaffar  <@smuzaffar>
	V06-02-09: Typo, fixed TSAN EDM_TOOLS_PREFIX issue
2021-06-03 Shahzad Muzaffar  <@smuzaffar>
	V06-02-07: More fixes for clang-tidy Notes Diagnostics
	V06-02-08: Added use-ibeos run which should be used with runtests
	so DAS queries and root files are picked up from IBEOS area.
2021-06-02 Shahzad Muzaffar  <@smuzaffar>
	V06-02-06: Fix code-checks rules
	- Process all headers files for code-checks-all
	- Fix clang-tidy apply script to make use of Notes Diagnostics