@@ -15,6 +15,7 @@ TOOL_MAKE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/updateToolMK$(SCRAM_SCRIP
 FIND_DEPS_TREE_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/find-deps-tree$(SCRAM_SCRIPT_EXT)
 PROJECT_AREA_RENAME_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/projectAreaRename$(SCRAM_SCRIPT_EXT)
 PROJECT_INFO_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/projectInfo$(SCRAM_SCRIPT_EXT)
+CHECK_PRIVATE_HEADERS_SCRIPT:=$(LOCALTOP)/$(SCRAM_CONFIGDIR)/SCRAM/check-product-src$(SCRAM_SCRIPT_EXT)
 
 SCRAM_MAKEFILE := $(firstword $(MAKEFILE_LIST))
 ToolTimeStamps := $(wildcard $(SCRAM_TOOLS_DIR)/*)
