@@ -1,3 +1,6 @@
+2021-08-19 Shahzad Muzaffar  <@smuzaffar>
+	V06-03-02 Added private header usage check. For now just ignore such usage.
+	Once cmssw is clean of such errors then enable it.
 2021-07-28 Shahzad Muzaffar  <@smuzaffar>
 	V06-03-01 Fix proect rename/move issue
 2021-07-18 Shahzad Muzaffar  <@smuzaffar>
